# Genshin-Impact-Party-Optimizer

./: .gitignore  README.md  pyproject.toml
data/: .gitignore
notebooks/: Characters Data Acquisition - 01.ipynb  Prototype 02.ipynb  Prototype-01.ipynb
